--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,4 @@ HELP.md
 Thumbs.db
 
 # CUSTOM: Ignore sensitive config files
-src/main/resources/application.properties
+src/main/resources/application.yml
